--- a/config/database.yml
+++ b/config/database.yml
@@ -69,7 +69,7 @@ test:
 # production deployment.
 #
 # On Heroku and other platform providers, you may have a full connection URL
-# available as an environment variable. For example:
+# available as an environment variable. For google_api:
 #
 #   DATABASE_URL="postgres://myuser:mypass@localhost/somedatabase"
 #
